--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -53,7 +53,7 @@
                 }
                 @media (min-width: 768px) {
                     font-size: calc(1.075rem + 2.5vw);
-                    padding-top: 4%;
+                    padding-top: 2%;
                 }
                 @media (max-width: 1024px) {
                     font-size: calc(1.375rem + 2.1vw);
@@ -123,7 +123,7 @@
                     border-bottom-right-radius: 0;
                 }
                 @media (min-width: 1024px) {
-                    margin-bottom: 190px;
+                    margin-bottom: 180px;
                 }
                 @media (max-width:425px) {
                     // margin-top: 25px;
@@ -132,7 +132,7 @@
                 }
                 background-color: #f7f7f7;
                 border-radius: 10px 10px 0px 0px;
-                margin-top: 3%;
+                // margin-top: 3%;
                 overflow: hidden;
                 .tab {
                     display: inline-block;
@@ -278,6 +278,8 @@
         }
 
         .search-sec {
+            display: flex;
+            align-items: center;
             z-index: 9;
             min-height: 130px;
             background-color: #fff;
@@ -285,7 +287,7 @@
             border-radius: 0px 20px 20px 20px;
             margin: auto;
             @media (min-width: 768px) {
-                width: 83.3%;
+                width: 83.4%;
                 margin-top: -190px;
                 // border-top-left-radius: 0;
                 // border-top-right-radius: 0;
@@ -312,8 +314,9 @@
             .sell-row,
             
             .buyRent-row{
-	            display: flex;
-                justify-content: space-between;
+	            // display: flex;
+                // justify-content: space-between;
+                width: 100%;
 
                 @media (max-width: 425px) {
                     display: block;
@@ -328,7 +331,10 @@
                 }
 
                 .options{
-                    width: 70%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-top: 1%;
 
                     @media (max-width: 425px) {
                         width: 100%;
@@ -337,6 +343,8 @@
 					.all-options{
 						display: flex;
 						justify-content: space-between;
+                        width: 100%;
+                        align-items: center;
 
 						@media (max-width: 425px) {
 							display: block;
@@ -346,6 +354,7 @@
 					.compound{
                         display: flex;
                         margin: 1%;
+                        min-width: fit-content;
 
                         @media (max-width: 425px) {
                             margin-top: 25px;
@@ -377,9 +386,22 @@
                 }
 
                 .actions{
+                    height: 145px;
+                    background: #f7f7f7;
+                    margin: 0% 1.5% 1.5% 1.5%;
+                    border-radius: 10px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    align-items: center;
+                    
+                    .advisor-description{
+                        padding: 1% 5% 0% 5%;
+                    }
+
+                    .advisor-button{
+                        margin-bottom: 2%;
+                    }
 
                 
                     .buttons{
@@ -402,6 +424,7 @@
                             padding: 0% 1% 0% 1%;
                         }
                     }
+
                 }
 
             }
@@ -556,7 +579,7 @@
                         min-width: 5%;
                     }
                 }
-                margin-top: 25px;
+                // margin-top: 25px;
                 .lable {
                     font-family: "Rubik-bold";
                     font-size: 17px;
@@ -580,7 +603,7 @@
                 }
 
                 .applyBtn {
-                    height: 50px;
+                    // height: 50px;
                     min-width: 150px;
                     border-radius: 10px;
                     margin-left: 5px;
@@ -627,6 +650,7 @@
                 }
                 &.priceRange {
                     width: 22%;
+                    // min-width: fit-content !important;
 
                     @media (max-width: 425px) {
                         width: 100%;
@@ -769,6 +793,7 @@
                     }
                 }
                 &.realState {
+                    min-width: fit-content !important;
                     max-width: 14%;
                     @media (max-width: 1610px) {
                         max-width: 19%;
@@ -783,7 +808,7 @@
                 }
                 &.city {
                     // max-width: 11.99999%;
-                    min-width: 14.333333%;
+                    min-width: fit-content !important;
                 }
                 &.submit_buttons{
                     // min-width: 20%;
