--- a/src/app/shared/components/set-priorites/set-priorites.component.html
+++ b/src/app/shared/components/set-priorites/set-priorites.component.html
@@ -17,6 +17,220 @@
             <div class="col-xs-12 col-xl-10 main-content">
                 <!-- <div class="row"> -->
 
+                    <!-- filters  -->
+                    <div class="col-xs-12 col-xl-12 filters-list order-1 order-xl-0">
+                        <div class="mt-3 main">
+                            <div class="filters">
+
+                                <!-- city -->
+
+                                <div class="ngSelect city">
+                                    <p class="lable d-none d-lg-block">{{'home.City' | translate}}</p>
+                                    
+                                    <angular2-multiselect [data]="dropdownListCity" [(ngModel)]="selectedItemCity" 
+                                    [settings]="settingsCity"
+                                    (onSelect)="onChangeCity($event)"
+                                    (onDeSelectAll)="onDeSelectAllCity()">
+                                    </angular2-multiselect>
+            
+                                    <span *ngIf="selectedCityNotValid">{{'validation.This Filed Is Required!' | translate}}</span>
+            
+                                </div>
+                                
+                                <div class="separator">
+                                </div>
+                                
+                                <!-- area -->
+
+                                <div class="ngSelect area">
+                                    <p class="lable d-none d-lg-block">{{'home.Area' | translate}}</p>
+                                    
+                                    <angular2-multiselect [data]="dropdownListArea" [(ngModel)]="selectedItemArea" 
+                                    [settings]="settingsArea"
+                                    (onSelect)="onItemSelectArea($event)"
+                                    (onDeSelectAll)="onDeSelectAllArea()">
+                                    </angular2-multiselect>
+            
+                                    <span *ngIf="selectedAreaNotValid">{{'validation.This Filed Is Required!' | translate}}</span>
+            
+                                </div>
+                                
+                                <div class="separator">
+                                </div>
+                                
+                                <!-- compound -->
+                                <div class="ngSelect compound">
+                                    <div style="display: flex;justify-content: initial;margin-bottom: 14px;">
+                                        <input
+                                        class="checkbox"
+                                        type="checkbox"
+                                        [checked]="checkboxVar"
+                                        (change)="checkboxVar = !checkboxVar"/>
+                                        <p style="margin: 0%;" class="lable d-none d-lg-block">{{'home.Compound' | translate}}</p>
+
+                                    </div>
+                
+                                    <div class="dropdown">
+                                        <div class="multiselect" [ngStyle]="{'pointer-events': 'none'}" >
+                                            <angular2-multiselect 
+                                                [data]="dropdownListCompound" 
+                                                [(ngModel)]="selectedItemCompound" 
+                                                [settings]="settingsCompound"
+                                                (onSelect)="onItemSelectCompound($event)"
+                                                (onDeSelect) =onItemDeSelectCompound($event)>
+                                            </angular2-multiselect>
+                        
+                                        </div>
+                    
+                                        <span *ngIf="selectedCompoundNotValid">{{'validation.This Filed Is Required!' | translate}}</span>
+                    
+                
+                                    </div>
+                
+                                </div>
+
+                                <div class="separator">
+                                </div>
+
+                                <!-- location -->
+                                <div class="ngSelect location">
+                                    <p class="lable d-none d-lg-block">{{'home.Location' | translate}}</p>
+                                    
+                                    <angular2-multiselect [data]="dropdownListLocation" [(ngModel)]="selectedItemLocation" 
+                                    [settings]="settingsLocation"
+                                    (onSelect)="onItemSelectLocation($event)"
+                                    (onDeSelectAll)="onDeSelectAllLocation()">
+                                    </angular2-multiselect>
+            
+                                    <span *ngIf="selectedLocationNotValid">{{'validation.This Filed Is Required!' | translate}}</span>
+            
+                                </div>
+
+                                <div class="separator">
+                                </div>
+
+                                <!-- neighborhood -->
+                                <div class="ngSelect neighborhood">
+                                    <p class="lable d-none d-lg-block">{{'home.Neighborhood' | translate}}</p>
+                                    
+                                    <angular2-multiselect 
+                                        [data]="dropdownListNeighborhood" 
+                                        [(ngModel)]="selectedItemNeighborhood" 
+                                        [settings]="settingsNeigbhorhood"
+                                        (onSelect)="onItemSelectNeighborhood($event)"
+                                        (onDeSelect) =onItemDeSelectNeighborhood($event)>
+                                    </angular2-multiselect>
+            
+                                </div>
+
+                                <div class="separator">
+                                </div>
+
+                                <!-- unit type -->
+
+                                <div class="ngSelect realState">
+                                    <p class="lable d-none d-lg-block">{{'home.Real estate type' | translate}}</p>
+                                    
+                                    <angular2-multiselect [data]="dropdownListRealstateType" 
+                                        [(ngModel)]="selectedItemRealstateType" 
+                                        [settings]="settingsUnitType"
+                                        (onSelect)="onItemSelectUnitType($event)">
+                                    </angular2-multiselect>
+            
+                                    <span *ngIf="SelectedRealEstateTypeNotValid">{{'validation.This Filed Is Required!' |
+                                        translate}}</span>
+                                </div>
+
+                                <div class="separator">
+                                </div>
+                                
+                                <!-- price range -->
+                                <div class="ngSelect priceRange">
+                                    <div class="dropdown" ngbDropdown>
+                                        <p class="lable d-none d-lg-block">{{'home.Price' | translate}}</p>
+                                        <button ngbDropdownToggle [class.dimmed]="(!priceMinRange && !priceMaxRange)" #dropdownMenuButton1
+                                            class="btn dropdown-toggle setPriceBtn ngSelect-input"
+                                            type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"
+                                            style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                                            {{setPricePlaceHolder()}}
+            
+                                            <fa-icon style="position: initial; color: #aaaaaa"  [icon]="faChevronDown"></fa-icon>
+            
+                                        </button>
+            
+                                        <ul ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton1"
+                                            (click)="$event.stopPropagation()" style="overflow: visible; transform: translate3d(0px, 38.4px, 0px);">
+                                            
+                                            <!-- <app-price-range-slider (sender)="receiver($event)" [activeTab]="activeTab">
+                    
+                                            </app-price-range-slider> -->
+                    
+                                            <div id="price_range">
+                                                <div id="Price_range_q">
+                                                    {{'home.Price range' | translate}}
+                                                </div>
+                    
+                                                <div style="display: flex;">
+                                                    <fa-icon style="padding: 0px 3px 0px 3px; font-size: 14px;" [icon]="faExclamationCircle" [styles]="{'color': '#f75d5d'}" class="user-faExclamationCircle"></fa-icon>
+                    
+                                                    <div id="Price_range_hint">
+                                                        {{'home.Price range hint' | translate}} {{ abbreviateNumber(minValueText) }} {{'propertyDetails.EGP' | translate}} 
+                                                    </div>
+                                                </div>
+                    
+                                                <div id="slider">
+                                                    <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"
+                                                    (valueChange)="userChangeMin(true)" (highValueChange)="userChangeMax(true)"></ngx-slider>
+                                                </div>
+                    
+                                                <div id="textboxes">
+                          
+                                                    <div id="from">
+                                                        {{activeLang === 'en' ? 'From' : 'من'}}
+                            
+                                                        <div id="fromTextbox">
+                                                  
+                                                            <input id="Rectangle_1314_rbk" [(ngModel)]="minValueInput" 
+                                                            placeholder="Min value" ngxNumberFormat="#,###,###,###"
+                                                            [allowNegative]="false" type="text"
+                                                            (keyup)="userChangeMin(false)"/>
+                                                        </div>
+                                                    </div>
+                                                    
+                                                    <div id="to">
+                                                        {{activeLang === 'en' ? 'To' : 'إلى'}}
+                                                      
+                                                        <div id="fromTextbox">
+                                                  
+                                                            <input id="Rectangle_1314_rbk" [(ngModel)]="maxValueInput" 
+                                                            placeholder="Min value" ngxNumberFormat="#,###,###,###"
+                                                            [allowNegative]="false" type="text"
+                                                            (keyup)="userChangeMax(false)"/>
+                                                        </div>
+                                                    </div>
+                                                
+                                                  </div>
+                    
+                                            </div>
+                                          
+                                        </ul>
+                    
+                                    </div>
+                                    
+                                </div>
+
+                            </div>
+
+                            <div class="confirm">
+                                <button #apply
+                                    (click)="confirm()"
+                                    class="btn button-success" style="width: 100%;">{{'button.actions.Confirm' |
+                                    translate}}
+                                </button>
+
+                            </div>
+                        </div>
+                    </div>
                     <!-- priorites-list -->
                     <div class="col-xs-12 col-xl-12 priorites-list order-1 order-xl-0">
                         <div class="mt-3 main">
