--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -742,8 +742,8 @@
                    <p style="font-size: larger; font-weight: 700;"> {{'advisor_description2' | translate}}&nbsp;</p> 
                    <p style="font-size: larger;"> {{'advisor_description3' | translate}} </p> -->
 
-                    <p style="font-size: larger; font-weight: 700;text-align: center;">
-                        {{'advisor_description1' | translate}} {{'advisor_description2' | translate}} {{'advisor_description3' | translate}}
+                    <p style="font-size: larger; font-weight: 700;text-align: center; margin: 0px">
+                        {{'advisor_description1' | translate}} <span style="color:red"> {{'advisor_description2' | translate}} </span> {{'advisor_description3' | translate}}
 
                     </p>
 
