--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -394,24 +394,27 @@
                     margin: 1.5%;
                     border-radius: 10px;
                     display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
                     align-items: center;
+                    flex-direction: row;
+                    padding: 3%;
+                    justify-content: space-around;
                     
                     @media (max-width: 425px) {
                         padding: 5%;
+                        display: block;
+
                     }
 
                     .advisor-description{
-                        padding: 1% 5% 0% 5%;
+                        // padding: 1% 5% 0% 5%;
 
                         @media (max-width: 425px) {
-                            padding: 0%;
+                            padding-bottom: 30px;
 						}
                     }
 
                     .advisor-button{
-                        margin-bottom: 2%;
+                        // margin-bottom: 2%;
                     }
 
                 
@@ -503,13 +506,13 @@
                         }
                     }
     
-                    span {
-                        font-size: 10px;
-                        padding: 0 10px;
-                        color: red;
-                        margin-top: -1px;
-                        display: inherit;
-                    }
+                    // span {
+                    //     font-size: 10px;
+                    //     padding: 0 10px;
+                    //     color: red;
+                    //     margin-top: -1px;
+                    //     display: inherit;
+                    // }
                     &.price {
                         input {
                             display: inline-block;
