--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -51,7 +51,7 @@
             .filters{
                 display: flex;
                 width: 85%;
-                justify-content: space-between;
+                justify-content: initial;
                 margin: 0% 1%;
 
                 @media (max-width: 425px) {
@@ -514,7 +514,7 @@
 
                 @media (max-width: 425px) {
                     width: 100%;
-                    margin: 0%;
+                    margin: 5% 0%
                 }
             }
         }
